--- a/Project 5 - Travel App/package.json
+++ b/Project 5 - Travel App/package.json
@@ -29,6 +29,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "node-sass": "^4.14.1",
