--- a/Project 5 - Travel App/package.json
+++ b/Project 5 - Travel App/package.json
@@ -36,6 +36,7 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "supertest": "^4.0.2",
     "url-loader": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   }
